--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <HR></HR>
     <MArquee>Neo Tokyo</MArquee>
     <hr>
-    <img src="neotokyo.jpg" alt="foto neotokyo">
+    <img src="neotokyo.jpg" class="img-thumbnail" alt="foto neotokyo">
 </body>
 </html>
